--- a/Pokedex/src/components/Pokemons.css
+++ b/Pokedex/src/components/Pokemons.css
@@ -26,3 +26,12 @@
   flex-direction: column;
   list-style: none;
 }
+
+.pokemons img{
+  transition: .2s ease all;
+
+  &:hover {
+    transform: translateY(+5px);
+    filter: drop-shadow(0 0 0.75rem rgb(97, 20, 220));
+  }
+}
