--- a/Pokedex/src/components/Pokemons.css
+++ b/Pokedex/src/components/Pokemons.css
@@ -25,6 +25,7 @@
   align-items: center;
   flex-direction: column;
   list-style: none;
+  animation: aparecerAll .3s 2s both
 }
 
 .pokemons img{
@@ -33,5 +34,47 @@
   &:hover {
     transform: translateY(+5px);
     filter: drop-shadow(0 0 0.75rem rgb(97, 20, 220));
+  }
+}
+
+AllPokemons {
+  width: 100%;
+  display: flex;
+}
+
+.searchedPokemonCard {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
+}
+
+.searchedPokemonCard img {
+  width: 150px;
+  animation: aparecer .5s .5s both 
+}
+
+@keyframes aparecer {
+  from { 
+    opacity: 0;
+    transform: translateX(-500px); 
+  }
+  to { 
+    opacity: 1;
+    transform: translateX(0px);
+
+  }
+}
+
+@keyframes aparecerAll {
+  from { 
+    opacity: 0;
+    transform: translateY(+50px); 
+  }
+  to { 
+    opacity: 1;
+    transform: translateY(0px);
+
   }
 }
